# book-project

./: BWP_editorial_memo.md  README-bundle-files.md  README.md  build-what-pays-PUBLICATION_READY.md  build-what-pays-final-draft.md  build-what-pays-full.typ  build-what-pays-gumroad-package-v2.md  build-what-pays-parity-checklist.md  build-what-pays-parity-pass.md  build-what-pays-revised.md  build-what-pays-tufte-customization-plan.md  build-what-pays.typ  opportunity-arbitrage-book-full.html  opportunity-arbitrage-book.html  opportunity-arbitrage-design-brief.md  opportunity-arbitrage-gumroad-package.md  opportunity-arbitrage-sales-page-v2.md  opportunity-worksheet.html  typst-cheat-sheet.md
00_System_Briefs/: BWP_Editorial_Report.md  BWP_Revision_Assessment.md  BWP_Shipping_Plan.md  Editorial_Review_Full_Report.md  Master_Agent_Prompt.md  Pipeline_Handoff.md  Senior_Editor_Master_Brief.md  build-what-pays-manuscript-ruleset.md  (+1 more)
opportunity-radar/: .env.example  README.md  pyproject.toml
opportunity-radar/data/seeds/: public_data_candidates.json
opportunity-radar/docs/: mvp.md
opportunity-radar/reports/: briefs-latest.json  briefs-latest.md  latest.json  latest.md  public-data-latest.json  public-data-latest.md  ranked-briefs-latest.json  ranked-briefs-latest.md
opportunity-radar/src/opportunity_radar/: __init__.py  adapters_public_data.py  cli.py  live_pipeline.py  llm.py  models.py  opportunity_briefing.py  pipeline.py  repair.py  reporting.py  reporting_briefs.py  reporting_discovery.py  reporting_ranked_briefs.py  scoring.py  validation.py
(+164 files in other folders)
